tests/e2e/inline_service_output.error
Error: syntax error in story at line 1, column 22

1|    a = (listen command) as client
                           ^

E0007: Missing value after `=`
